BrowserPluginGuest::ResendEventToEmbedder should keep the same deltaUnits

When a nested scroller is at its scroll bounds InputHandlerProxy gets another
set of synthetic GestureScrollBegin/Update/End to scroll the parent scroller.

Before this CL, deltaUnits was not copied in GestureScrollBegin but was copied in
GestureScrollUpdate. As a result, InputHandlerProxy would expect an instant scroll
after GestureScrollBegin, but perform a smooth scroll in GestureScrollUpdate.

BUG=647205

Review-Url: https://codereview.chromium.org/2391643002
Cr-Commit-Position: refs/heads/master@{#422894}

Former-commit-id: eebaccca7bd4bc2f1a9fb9eaf8dcbc9c0377064d